--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<p>Welcome to my portfolio website! I am excited to share my work with you. Here you will find analytical projects related to my professional and personal interests, ranging from business dashboards to sports, 
-									music, and climate-related vizzes. Over the past couple of years, I’ve been developing my skills with advanced analytical tools such as SQL, Tableau, R, and Excel to bring data stories to life. 
-									I am constantly learning new skills and looking forward to bringing you more projects soon! Please check out my work <a href="#projects">here</a>.</p>
+								<p>Welcome to my portfolio! Being a data analyst has always been one of the many hats I wore as a store manager. A data analyst is someone who has the knowledge and skills to turn
+									raw data into actionable insights that help businesses make more effective decisions, they seek to identify solutions to problems and improve processes, and report their findings to 
+									management and other key stakeholders. As a retail manager, this was always my favorite hat to wear, which is why I'm looking to take a step away from management for awhile to focus on
+									my passion for analytics.<p>
+
+								<p>I am excited to share my work with you. Here you will find analytical projects related to my professional and personal interests, ranging from business dashboards to sports, 
+									music, and climate-related vizzes. I am constantly learning new skills and looking forward to bringing you more projects soon! Please check out my work <a href="#projects">here</a>.</p>
 							</article>
 
 						<!-- Projects -->
