--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<article id="projects">
 							<h2><a href="https://github.com/Chaser260/PDX-weather" class="major">PDX Weather Analysis | R</a></h2>
 							<a href="https://github.com/Chaser260/PDX-weather"><span class="image main"><img src="images/PDX Weather Analysis.png" alt="" /></span></a><br>
-							<p>I'm fascinated by climate change and weather related events. To develop my skills with the program language R, I pulled real climate data for the PDX weather station dating back to 1938 from NOAA.gov, to help me visualize what weather in Portland has looked like over the last 84 years.</p>
+							<p>I'm fascinated by climate change and weather related events. To develop my skills with the program language R, I pulled real climate data for the PDX weather station dating back to 1938 from NOAA.gov, to help me visualize what weather in Portland has looked like over the last 80+ years.</p>
 							<p>Prior to moving to Portland in 2011, I lived in Bend, OR. Growing up, all I ever heard about was how wet and rainy Portland was. People made it sound like Portland never saw the sun. In my exploration of the data, I found some interesting facts relating to precipitation, snow, and temperature change in Portland. All this Portland data made me curious to compare it to my home town of Bend, OR.<p>
 							<p>Spoiler alert! Although the average temperature in Portland has been rising over the past 80 years, temperatures in Bend have actually declined! </p>
 							<p>Go ahead, <a href="https://github.com/Chaser260/PDX-weather">check it out!</a></p>
