--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
 							<h4>Conclusion</h4>
 							<p>This was a great project to get me started on learning Tableau. It helped me find specific Youtube channels to subscribe to that can help me in future projects, and I got tons of practice finding answers through the Tableau community forums
 								and Stack Overflow. If I had to do this project over, I would love to try to establish a live connection with the data so that it is easier to update and doesn't become outdated.</p>
+							<p>Check out the full dashboard <a href="https://public.tableau.com/views/LebronJamesCareerStats_16615631128000/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">here</a>.</p>
 						</article>
 
 						<!-- About -->
