Changed order of projects

--- a/index.html
+++ b/index.html
@@ -54,25 +54,6 @@
 
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1" class="major">Interactive R&eacute;sum&eacute; | Tableau</a></h2>
-							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/Interactive Resume.png" alt="" /></span></a>
-							<h4>Intro</h4>
-							<p>What better way is there to get to know me than through interacting with my experiences? I recently saw a LinkedIn post showing some of the creative ways people have made interactive r&eacute;sum&eacute;s in 
-								Tableau and I was inspired to create my own. </p>
-							<h4>Purpose</h4>
-							<p>I decided to make this r&eacute;sum&eacute; to showcase my technical and creative skills to potential employers in the analytical space. When people think "Store Manager" they don't always associate it with the same
-								skills and responsibilities as a Business or Data Analyst, however, the roles have some extraordinarily similar qualities. <p>
-							</p>A Store Manager, much like a Data Analyst is responsible for analyzing their business using 
-								whatever analytical tools available to them (Excel, SQL, Tableau, etc...) to identify patterns and trends in the data that help themselves, or their businesses make better decisions. They then take this information and put it together
-								in various forms to communicate their findings and best practices with their peers, managers, and other key stakeholders in weekly, monthly, and quarterly business reviews. Unlike a Data Analyst however, Store Managers are then responsible
-								for developing their own action plans, and then communicating the solution and leading their teams to execute the plan from end-to-end while maintaining responsiblity over success or failure.</p>
-							<p>In this interactive r&eacute;sum&eacute;, you get to see my professional background in a unique way, with additional context that wouldn't fit in a typical one-pager. My work and educational history are presented in a rounded Gantt chart 
-								in the center, with my hard and soft skills represented in the horizontal bubble chart below by half-circles (soft skills) and triangles (hard skills). Something that is not included in my r&eacute;sum&eacute; yet is that I have applied 
-								to receive my master's degree in Global Supply Chain Management at Portland State University, which starts in the Spring of 2023. Once I get admitted I will add it to my timeline as in-progress.<p>
-							</p>Hover over, or click each of the elements to explore!</p>
-						</article>
-
-						<article id="projects">
 							<h2><a href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link" class="major">HR Attrition Dashboard | Tableau</a></h2>
 							<a href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link"><span class="image main"><img src="images/HR Attrition Dashboard.png" alt="" /></span></a>
 							<h4>Purpose</h4>
@@ -189,7 +170,26 @@
 							<p>Improving the pay structure will help reduce the heavy costs of employee turnover, and ensure the company is retaining its top talent, while replacing low performing individuals with diverse talent from all races and backgrounds. Adding job performance data, job satisfaction ratings, and additional exit survey questions to this dataset will help pinpoint the root causes of attrition, and help us identify the right actions to take to make the best decision for the business and its employees
 								to make progress toward employee retention and job satisfaction.</p>
 						</article>
-
+						<!-- Projects -->
+						<article id="projects">
+							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1" class="major">Interactive R&eacute;sum&eacute; | Tableau</a></h2>
+							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/Interactive Resume.png" alt="" /></span></a>
+							<h4>Intro</h4>
+							<p>What better way is there to get to know me than through interacting with my experiences? I recently saw a LinkedIn post showing some of the creative ways people have made interactive r&eacute;sum&eacute;s in 
+								Tableau and I was inspired to create my own. </p>
+							<h4>Purpose</h4>
+							<p>I decided to make this r&eacute;sum&eacute; to showcase my technical and creative skills to potential employers in the analytical space. When people think "Store Manager" they don't always associate it with the same
+								skills and responsibilities as a Business or Data Analyst, however, the roles have some extraordinarily similar qualities. <p>
+							</p>A Store Manager, much like a Data Analyst is responsible for analyzing their business using 
+								whatever analytical tools available to them (Excel, SQL, Tableau, etc...) to identify patterns and trends in the data that help themselves, or their businesses make better decisions. They then take this information and put it together
+								in various forms to communicate their findings and best practices with their peers, managers, and other key stakeholders in weekly, monthly, and quarterly business reviews. Unlike a Data Analyst however, Store Managers are then responsible
+								for developing their own action plans, and then communicating the solution and leading their teams to execute the plan from end-to-end while maintaining responsiblity over success or failure.</p>
+							<p>In this interactive r&eacute;sum&eacute;, you get to see my professional background in a unique way, with additional context that wouldn't fit in a typical one-pager. My work and educational history are presented in a rounded Gantt chart 
+								in the center, with my hard and soft skills represented in the horizontal bubble chart below by half-circles (soft skills) and triangles (hard skills). Something that is not included in my r&eacute;sum&eacute; yet is that I have applied 
+								to receive my master's degree in Global Supply Chain Management at Portland State University, which starts in the Spring of 2023. Once I get admitted I will add it to my timeline as in-progress.<p>
+							</p>Hover over, or click each of the elements to explore!</p>
+						</article>
+						<!-- Projects -->
 						<article id="projects">
 							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard" class="major">Retail Dashboard | Tableau</a></h2>
 							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/Retail Dashboard.png" alt="" /></span></a>
