Added SEO updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Chase Carlson Portfolio</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Chase Carlson's data analyst portfolio website. Created to showcase analytical projects to potential employers in the retail industry.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -54,8 +55,8 @@
 
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link" class="major">HR Attrition Dashboard | Tableau</a></h2>
-							<a href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link"><span class="image main"><img src="images/hr_attrition_dashboard.webp" alt="HR Attrition Visualization" /></span></a>
+							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link" class="major">HR Attrition Dashboard | Tableau</a></h2>
+							<a title = "View on Tableau Public" href="https://public.tableau.com/views/HRPeopleAnalytics_16751399411520/ATTRITIONDASHBOARD?:language=en-US&:display_count=n&:origin=viz_share_link"><span class="image main"><img src="images/hr_attrition_dashboard.webp" alt="HR Attrition Visualization" /></span></a>
 							<h4>Purpose</h4>
 							<p>This project is my entry into the Data In Motion LLC monthly data viz challenge. The assignment was to take on the role of an HR people analyst to find insight on termination trends, department turnover, salary, diversity rates, and more 
 								for over 4,000 (not real) employees. I decided to take the approach of creating a dashboard to help us understand what is driving attrition at the company, and what we can do to reduce employee turnover.</p>
@@ -172,8 +173,8 @@
 						</article>
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1" class="major">Interactive R&eacute;sum&eacute; | Tableau</a></h2>
-							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/interactive_resume.webp" alt="Interactive resume" /></span></a>
+							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1" class="major">Interactive R&eacute;sum&eacute; | Tableau</a></h2>
+							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/interactive_resume.webp" alt="Interactive resume" /></span></a>
 							<h4>Intro</h4>
 							<p>What better way is there to get to know me than through interacting with my experiences? I recently saw a LinkedIn post showing some of the creative ways people have made interactive r&eacute;sum&eacute;s in 
 								Tableau and I was inspired to create my own. </p>
@@ -191,8 +192,8 @@
 						</article>
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard" class="major">Retail Dashboard | Tableau</a></h2>
-							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/Retail Dashboard.webp" alt="Retail KPI dashboard" /></span></a>
+							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard" class="major">Retail Dashboard | Tableau</a></h2>
+							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1"><span class="image main"><img src="images/Retail Dashboard.webp" alt="Retail KPI dashboard" /></span></a>
 							<h4>Purpose</h4>
 							<p>In this project I wanted to create a retail KPI dashboard that is simple, yet delivers a ton of value to field leaders. The end user wants to be able to:</p>
 							<ul>
@@ -301,8 +302,8 @@
 
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/BellabeatMarketingCaseStudy/Story1" class="major">Bellabeat Case Study | SQL</a></h2>
-							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/BellabeatMarketingCaseStudy/Story1"><span class="image main"><img src="images/bellabeat_case_study.webp" alt="Bellabeat case study" /></span></a><br>
+							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/BellabeatMarketingCaseStudy/Story1" class="major">Bellabeat Case Study | SQL</a></h2>
+							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/BellabeatMarketingCaseStudy/Story1"><span class="image main"><img src="images/bellabeat_case_study.webp" alt="Bellabeat case study" /></span></a><br>
 							<h4>Purpose</h4>
 							<p>This case study is the capstone project in the Google Data Analytics Professional Certificate on Coursera. I was provided a dataset from Kaggle on which to analyze trends in fitness tracker usage 
 								to answer key business questions and make high-level recommendations for a wellness brand's marketing strategy (Bellabeat).</p>
@@ -351,8 +352,8 @@
 
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://github.com/Chaser260/PDX-weather" class="major">PDX Weather Analysis | R</a></h2>
-							<a href="https://github.com/Chaser260/PDX-weather"><span class="image main"><img src="images/pdx_weather_analysis.webp" alt="Weather visualization project" /></span></a><br>
+							<h2><a title = "View on GitHub" href="https://github.com/Chaser260/PDX-weather" class="major">PDX Weather Analysis | R</a></h2>
+							<a title = "View on GitHub" href="https://github.com/Chaser260/PDX-weather"><span class="image main"><img src="images/pdx_weather_analysis.webp" alt="Weather visualization project" /></span></a><br>
 							<h4>Purpose</h4>
 							<p>I'm fascinated by climate change and weather related events. To develop my skills with the program language R, I pulled real climate data for the PDX weather station dating back to 1938 from NOAA.gov, to help me visualize what climate in Portland has looked like over the last 84 years.</p>
 							<p>Prior to moving to Portland in 2011, I lived in Bend, OR. Growing up, all I ever heard about was how wet and rainy Portland was. People made it sound like Portland never saw the sun. In my exploration of the data, I found some interesting facts relating to precipitation, snow, and temperature change in Portland. All this Portland data made me curious to compare it to my home town of Bend, OR.<p>
