--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
 
 						<!-- Projects -->
 						<article id="projects">
-							<h2><a href="https://public.tableau.com/app/profile/chase.carlson/viz/LebronJamesCareerStats_16615631128000/Dashboard1" class="major">LeBron James Stats | Excel</a></h2>
-							<a href="https://public.tableau.com/app/profile/chase.carlson/viz/LebronJamesCareerStats_16615631128000/Dashboard1"><span class="image main"><img src="images/lebron_james_stats.webp" alt="Lebron James career stats" /></span></a>
+							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/LebronJamesCareerStats_16615631128000/Dashboard1" class="major">LeBron James Stats | Excel</a></h2>
+							<a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/LebronJamesCareerStats_16615631128000/Dashboard1"><span class="image main"><img src="images/lebron_james_stats.webp" alt="Lebron James career stats" /></span></a>
 							<h4>Purpose</h4>
 							<p>This was my first self-guided project using Tableau to create a visualization. I performed most of the heavy lifting in Excel prior to importing into Tableau. I'll go more into detail about how I processed
 								the data in Excel below. I love following all the G.O.A.Ts in their respective sports, but I was particularly interested in putting it into a vizz. I decided to focus on Lebron because I knew he was getting 
