updated link descriptions

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 							<p>Improving the pay structure will help reduce the heavy costs of employee turnover, and ensure the company is retaining its top talent, while replacing low performing individuals with diverse talent from all races and backgrounds. Adding job performance data, job satisfaction ratings, and additional exit survey questions to this dataset will help pinpoint the root causes of attrition, and help us identify the right actions to take to make the best decision for the business and its employees
 								to make progress toward employee retention and job satisfaction.</p>
 						</article>
+
 						<!-- Projects -->
 						<article id="projects">
 							<h2><a title = "View on Tableau Public" href="https://public.tableau.com/app/profile/chase.carlson/viz/InteractiveResume_16713412902270/Dashboard1" class="major">Interactive R&eacute;sum&eacute; | Tableau</a></h2>
@@ -297,7 +298,7 @@
 										<div class="description"><h6>KPI drill down table</h6></div>	
 									</div>
 								</div>
-							<p>Check out the full dashboard <a href="https://public.tableau.com/views/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard?:language=en-US&:display_count=n&:origin=viz_share_link">here</a>.</p>
+							<p>Check out the full dashboard on <a href="https://public.tableau.com/views/GlobalSuperstoreDashboard_16747734773080/ExecutiveDashboard?:language=en-US&:display_count=n&:origin=viz_share_link">Tableau Public</a>.</p>
 						</article>
 
 						<!-- Projects -->
@@ -337,7 +338,7 @@
 							<h4>Preparing the data</h4>
 							<p>After creating a database in MySQL and importing all of the csv files, I started by checking the basic statistics and cleaning the data. I went through and 
 								removed duplicate records and outliers that would skew the data, renamed and formatted columns for consistency, and merged tables to compare sleep and weight log data alongside 
-								other daily activity. I have uploaded my SQL scripts with detailed notes to my GitHub page <a href="https://github.com/Chaser260/Bellabeat-Marketing-Case-Study-Tableau">here</a>.
+								other daily activity. I have uploaded my SQL scripts with detailed notes to my <a href="https://github.com/Chaser260/Bellabeat-Marketing-Case-Study-Tableau">GitHub</a> page.
 							</p>
 							<h4>Designing the dashboard</h4>
 							<p>I decided to make this a Tableau story where I could present my findings in a similar method as a PPT presentation. There are 4 different slides excluding the title page.<p>
@@ -528,7 +529,7 @@
 							<h4>Conclusion</h4>
 							<p>This was a great project to get me started on learning Tableau. It helped me find specific Youtube channels to subscribe to that can help me in future projects, and I got tons of practice finding answers through the Tableau community forums
 								and Stack Overflow. If I had to do this project over, I would love to try to establish a live connection with the data so that it is easier to update and doesn't become outdated.</p>
-							<p>Check out the full dashboard <a href="https://public.tableau.com/views/LebronJamesCareerStats_16615631128000/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">here</a>.</p>
+							<p>Check out the full dashboard on <a href="https://public.tableau.com/views/LebronJamesCareerStats_16615631128000/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Tableau Public</a>.</p>
 						</article>
 
 						<!-- About -->
