fixed missing image

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 								</div>
 								<div class="image">
 									<div class="image fit">
-										<img title = "Click to enlarge" src="/images/after.png" alt="" class="center">
+										<img title = "Click to enlarge" src="/images/after.webp" alt="" class="center">
 										<div class="description"><h6>After</h6></div>
 									</div>
 								</div>
