moved render-blocking script

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="eng">
 	<head>
 		<title>Chase Carlson Portfolio</title>
 		<meta charset="utf-8" />
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://kit.fontawesome.com/8b4251c69b.js" crossorigin="anonymous"></script>
+		
 	</head>
 	<body class="is-preload">
 
@@ -838,6 +838,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>	
-			
+			<script src="https://kit.fontawesome.com/8b4251c69b.js" crossorigin="anonymous"></script>
 	</body>
 </html>
