removed link in intro

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								my passion for analytics.<p>
 
 							<p>I am excited to share my work with you. Here you will find analytical projects related to my professional and personal interests, ranging from business dashboards to sports, 
-								music, and climate-related vizzes. I am constantly learning new skills and looking forward to bringing you more projects soon! Please check out my work <a href="#projects">here</a>.</p>
+								music, and climate-related vizzes. I am constantly learning new skills and looking forward to bringing you more projects soon!</p>
 						</article>
 
 						<!-- Projects -->
